--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,22 @@
   </head>
 
   <body>
+    <div style="background-color: grey; display: flex; padding: 16px">
+      <div>
+        <%= link_to "Home", root_path %>
+      </div>
+      |
+      <div>
+        <%= link_to "Foo", foo_path %>
+      </div>
+      |
+      <div>
+        <%= link_to "Contact", contact_path %>
+      </div>
+    </div>
     <%= yield %>
+    <div style="background-color: grey;">
+      This is my footer
+    </div>
   </body>
 </html>
